Remove old `.fa` classes from webUI
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/explore.scss
+++ b/app/javascript/flavours/polyam/styles/components/explore.scss
@@ -22,19 +22,13 @@
     border: 1px solid lighten($ui-base-color, 8%);
   }
 
-  .search .fa {
-    top: 10px;
-    inset-inline-end: 10px;
-    color: $dark-text-color;
-  }
-
   .search .icon {
     top: 9px;
     inset-inline-end: 10px;
     color: $dark-text-color;
   }
 
-  .search .fa-times-circle {
+  .search .icon-times-circle {
     top: 12px;
   }
 }
