--- a/app/javascript/flavours/polyam/styles/components/media.scss
+++ b/app/javascript/flavours/polyam/styles/components/media.scss
@@ -599,10 +599,10 @@
     .video-player__download__icon {
       color: inherit;
 
-      .fa,
-      &:active .fa,
-      &:hover .fa,
-      &:focus .fa {
+      .icon,
+      &:active .icon,
+      &:hover .icon,
+      &:focus .icon {
         color: inherit;
       }
     }
