--- a/app/javascript/flavours/polyam/styles/components/signed_out.scss
+++ b/app/javascript/flavours/polyam/styles/components/signed_out.scss
@@ -13,7 +13,7 @@
       &:hover {
         text-decoration: underline;
 
-        .fa {
+        .icon {
           color: lighten($dark-text-color, 7%);
         }
       }
