--- a/app/javascript/flavours/polyam/styles/components/single_column.scss
+++ b/app/javascript/flavours/polyam/styles/components/single_column.scss
@@ -33,7 +33,7 @@
     padding-inline-end: 30px;
   }
 
-  .search__icon .fa {
+  .search__icon .icon {
     top: 15px;
   }
 
@@ -133,7 +133,7 @@
     padding-inline-end: 30px;
   }
 
-  .search__icon .fa {
+  .search__icon .icon {
     top: 15px;
   }
 
