--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -86,7 +86,7 @@
     &:hover {
       text-decoration: underline;
 
-      .fa {
+      .icon {
         color: lighten($dark-text-color, 7%);
       }
     }
@@ -101,7 +101,7 @@
       }
     }
 
-    .fa {
+    .icon {
       color: $dark-text-color;
     }
   }
@@ -453,7 +453,7 @@
     padding-inline-end: 2px;
   }
 
-  .status__collapse-button.active > .fa-angle-double-up {
+  .status__collapse-button.active > .icon {
     transform: rotate(-180deg);
   }
 
@@ -465,13 +465,13 @@
 
 .no-reduce-motion .status__collapse-button {
   &.activate {
-    & > .fa-angle-double-up {
+    & > .icon {
       animation: spring-flip-in 1s linear;
     }
   }
 
   &.deactivate {
-    & > .fa-angle-double-up {
+    & > .icon {
       animation: spring-flip-out 1s linear;
     }
   }
@@ -554,7 +554,7 @@
     margin-inline-end: 14px;
   }
 
-  .fa-plus {
+  .icon-plus {
     padding-top: 1px;
   }
 }
@@ -640,7 +640,7 @@
   flex-direction: row;
   padding: 10px 0;
 
-  .fa-plus {
+  .icon-plus {
     padding-top: 2px;
   }
 }
@@ -836,8 +836,8 @@ a.status__display-name,
       bottom: -1px;
     }
 
-    a .fa,
-    a:hover .fa {
+    a .icon,
+    a:hover .icon {
       color: inherit;
     }
   }
@@ -961,15 +961,6 @@ a.status-card {
   aspect-ratio: 1;
   background: lighten($ui-base-color, 8%);
   position: relative;
-
-  & > .fa {
-    font-size: 21px;
-    position: absolute;
-    transform-origin: 50% 50%;
-    top: 50%;
-    inset-inline-start: 50%;
-    transform: translate(-50%, -50%);
-  }
 
   & > .icon {
     width: 15px;
@@ -1098,8 +1089,7 @@ a.status-card {
       display: block;
     }
 
-    .icon,
-    .fa {
+    .icon {
       color: $dark-text-color;
     }
   }
