Fix icon in interaction modal
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/modal.scss
+++ b/app/javascript/flavours/polyam/styles/components/modal.scss
@@ -1334,6 +1334,11 @@ img.modal-warning {
   &__icon {
     color: $highlight-text-color;
     margin: 0 5px;
+
+    // FA adds vertical align, which makes the icon look displaced
+    .icon {
+      vertical-align: 0;
+    }
   }
 
   &__lead {
