Restore old boost icon
This restores the old FA4 boost icon.

The animation is still gone though, because I don't know how this worked and I want to see how upstream implements them to not have multiple implementations.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/misc.scss
+++ b/app/javascript/flavours/polyam/styles/components/misc.scss
@@ -353,6 +353,11 @@ body > [data-popper-placement] {
   .icon.star-icon {
     color: $gold-star;
   }
+
+  // Makes reblog icon a bit larger in notifications as it's not square
+  .icon.icon-retweet {
+    width: 17px;
+  }
 }
 
 .icon-button.star-icon.active {
