Fix size of account note buttons
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -763,6 +763,12 @@
           background-color: transparent;
           cursor: default;
         }
+
+        // 14px instead of 15px to match old size
+        .icon {
+          width: 14px;
+          height: 14px;
+        }
       }
 
       .flex-spacer {
