--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -622,6 +622,11 @@
         height: 22px;
       }
 
+      .icon {
+        width: 14px;
+        height: 14px;
+      }
+
       h1 {
         font-size: 16px;
         line-height: 24px;
