Fix arrow sizes and alignment in announcements
Upstream issue, but I don't want to wait.

Added display flex and icon class

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/announcements.scss
+++ b/app/javascript/flavours/polyam/styles/components/announcements.scss
@@ -99,12 +99,20 @@
     }
   }
 
+  // Added display flex to align arrows better in FF, Chrome still slightly misaligned
   &__pagination {
     padding: 15px;
     color: $darker-text-color;
     position: absolute;
     bottom: 3px;
     inset-inline-end: 0;
+    display: flex;
+
+    // Fix arrow size in announcements
+    .icon {
+      width: 13px;
+      height: 13px;
+    }
   }
 }
 
