Fix arrow size in column settings
Also upstream issue.

Added icon class to size icons correctly.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -550,6 +550,12 @@ $ui-header-height: 55px;
     color: $darker-text-color;
     text-decoration: underline;
   }
+
+  // Fix icon size of arrows in column settings
+  .icon {
+    width: 13px;
+    height: 13px;
+  }
 }
 
 .column-header__collapsible__extra + .column-header__setting-btn {
