--- a/app/javascript/flavours/polyam/styles/components/misc.scss
+++ b/app/javascript/flavours/polyam/styles/components/misc.scss
@@ -1137,9 +1137,10 @@ button.icon-button.active .icon-retweet {
   background: transparent;
   cursor: pointer;
 
+  // Keep size same as arrows
   .icon {
-    width: 10px;
-    height: 10px;
+    width: 13px;
+    height: 13px;
   }
 }
 
