Better alignment of icons in detailed status
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -644,9 +644,7 @@
   text-decoration: none;
   gap: 6px;
   position: relative;
-
-  // Messes with alignment
-  // top: 0.145em;
+  top: 0.145em;
 
   .icon {
     top: 0;
