Fix icon size in local settings
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/local_settings.scss
+++ b/app/javascript/flavours/polyam/styles/components/local_settings.scss
@@ -73,6 +73,11 @@
     unicode-bidi: embed;
   }
 
+  .icon {
+    width: 15px;
+    height: 15px;
+  }
+
   &:hover {
     background: $ui-secondary-color;
   }
