Fix icon size in local settings (#355)
* Fix icon size in local settings

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Fix alignment of icons in local setting navigation

Changed to inline-flex, added gap and center align items.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

---------

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/local_settings.scss
+++ b/app/javascript/flavours/polyam/styles/components/local_settings.scss
@@ -51,8 +51,9 @@
   }
 }
 
+// Changed display block to inline-flex and added gap and align-items to fix alignment of icons
 .glitch.local-settings__navigation__item {
-  display: block;
+  display: inline-flex;
   padding: 15px 20px;
   color: inherit;
   background: lighten($ui-secondary-color, 8%);
@@ -66,11 +67,18 @@
   width: 100%;
   text-align: start;
   font-size: inherit;
+  align-items: center;
+  gap: 4px;
 
   .text-icon-button {
     color: inherit;
     transition: unset;
     unicode-bidi: embed;
+  }
+
+  .icon {
+    width: 15px;
+    height: 15px;
   }
 
   &:hover {
