--- a/app/views/admin/roles/_form.html.haml
+++ b/app/views/admin/roles/_form.html.haml
@@ -20,16 +20,16 @@
       .fields-row__column.fields-row__column-6
         .user-role__preview
           .item.dark
-            .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-1' }
+            .account-role{ class: "user-role-#{form.object.id}", id: 'user-role-preview-1' }
               = person_icon
               %span= form.object.name
           .item.light
-            .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-2' }
+            .account-role{ class: "user-role-#{form.object.id}", id: 'user-role-preview-2' }
               = person_icon
               %span= form.object.name
           - if current_user.setting_skin != 'default' && current_user.setting_skin != 'mastodon-light'
             .item.account__header__bar
-              .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-3' }
+              .account-role{ class: "user-role-#{form.object.id}", id: 'user-role-preview-3' }
                 = person_icon
                 %span= form.object.name
   %hr.spacer/
