Don't display "None" when importing domain blocks
It's not really useful information in this case.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/export_domain_blocks/_domain_block.html.haml
+++ b/app/views/admin/export_domain_blocks/_domain_block.html.haml
@@ -17,7 +17,7 @@
 
       %br/
 
-      = f.object.policies.map { |policy| t(policy, scope: 'admin.instances.content_policies.policies') }.join(' · ')
+      = f.object.policies.filter_map { |policy| t(policy, scope: 'admin.instances.content_policies.policies') if policy != :noop }.join(' · ')
       - if f.object.public_comment.present?
         ·
         = f.object.public_comment
