[WIP] Add public comment to instance moderation
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/instances/_instance.html.haml
+++ b/app/views/admin/instances/_instance.html.haml
@@ -12,4 +12,11 @@
         - else
           = t('admin.accounts.no_limits_imposed')
 
+      - if instance.domain_block
+        %small
+          - if instance.domain_block.public_comment.present?
+            = instance.domain_block.public_comment
+          - else
+            = t('admin.instances.reason_unavailable')
+
     .trends__item__current{ title: t('admin.instances.known_accounts', count: instance.accounts_count) }= friendly_number_to_human instance.accounts_count
