--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -25,6 +25,7 @@ body {
 .compose-form__buttons-wrapper,
 .compose-form__warning,
 .spoiler-input input,
+.compose-panel .compose-form__modifiers,
 .reply-indicator {
   background: $ui-base-semi-lighter-color;
   color: $primary-text-color;
