--- a/app/javascript/flavours/glitch/styles/homogay/diff.scss
+++ b/app/javascript/flavours/glitch/styles/homogay/diff.scss
@@ -34,7 +34,7 @@ body {
 .compose-form__buttons-wrapper,
 .compose-form__warning,
 .spoiler-input input,
-.compose-form__modifiers,
+.compose-panel .compose-form__modifiers,
 .reply-indicator {
   background: $ui-base-semi-lighter-color;
   color: $primary-text-color;
