--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -174,8 +174,11 @@
 }
 
 .account__disclaimer {
+  display: flex;
   padding: 10px;
+  gap: 5px;
   color: $dark-text-color;
+  align-items: center;
 
   strong {
     font-weight: 500;
