[Polyam] Fix styling issue in account fields
Port 07b6777c99e08b03698215d5c61b0d1fbbd80c90 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -697,6 +697,10 @@
       .verified a {
         color: $valid-value-color;
       }
+
+      .icon {
+        vertical-align: middle;
+      }
     }
   }
 
