--- a/app/javascript/flavours/polyam/styles/components/misc.scss
+++ b/app/javascript/flavours/polyam/styles/components/misc.scss
@@ -1516,6 +1516,11 @@ button.icon-button.active .icon-retweet {
         color: $primary-text-color;
         text-decoration: none;
 
+        .icon {
+          width: 15px;
+          height: 15px;
+        }
+
         &:hover,
         &:focus,
         &:active {
