Match upstream CSS further
Added more comments, made it clearer they're for polyam-glitch and removed obsolete comments.

Took some more missed changes from upstream

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/accessibility.scss
+++ b/app/javascript/flavours/polyam/styles/accessibility.scss
@@ -15,6 +15,7 @@ $emojis-requiring-inversion: 'back' 'copyright' 'curly_loop' 'currency_exchange'
   }
 }
 
+// Polyam: Kept from upstream -- Upstream uses different icons
 // Display a checkmark on active UI elements otherwise differing only by color
 .status__action-bar-button,
 .detailed-status__button .icon-button {
