--- a/app/javascript/flavours/polyam/styles/components/announcements.scss
+++ b/app/javascript/flavours/polyam/styles/components/announcements.scss
@@ -99,7 +99,7 @@
     }
   }
 
-  // Added display flex to align arrows better in FF, Chrome still slightly misaligned
+  // Polyam: Added display flex to align arrows better in FF, Chrome still slightly misaligned
   &__pagination {
     padding: 15px;
     color: $darker-text-color;
@@ -108,7 +108,7 @@
     inset-inline-end: 0;
     display: flex;
 
-    // Fix arrow size in announcements
+    // Polyam: Fix arrow size in announcements
     .icon {
       width: 13px;
       height: 13px;
