--- a/app/javascript/flavours/polyam/styles/components/explore.scss
+++ b/app/javascript/flavours/polyam/styles/components/explore.scss
@@ -28,6 +28,7 @@
     color: $dark-text-color;
   }
 
+  // TODO: This might not be necessary anymore?
   .search .icon-times-circle {
     top: 12px;
   }
