--- a/app/javascript/flavours/polyam/styles/components/local_settings.scss
+++ b/app/javascript/flavours/polyam/styles/components/local_settings.scss
@@ -51,9 +51,10 @@
   }
 }
 
-// Changed display block to inline-flex and added gap and align-items to fix alignment of icons
 .glitch.local-settings__navigation__item {
-  display: inline-flex;
+  display: flex;
+  gap: 5px;
+  align-items: center;
   padding: 15px 20px;
   color: inherit;
   background: lighten($ui-secondary-color, 8%);
@@ -67,18 +68,11 @@
   width: 100%;
   text-align: start;
   font-size: inherit;
-  align-items: center;
-  gap: 4px;
 
   .text-icon-button {
     color: inherit;
     transition: unset;
     unicode-bidi: embed;
-  }
-
-  .icon {
-    width: 15px;
-    height: 15px;
   }
 
   &:hover {
