Fix background of disabled vote button in polls
Sets the background to transparent, like default.

Not the best design, but better than current.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -19,6 +19,15 @@ body {
   color: $highlight-text-color;
 }
 
+// Fix background of disabled vote button
+.poll__footer {
+  button {
+    &:disabled {
+      background-color: transparent;
+    }
+  }
+}
+
 // compose panel
 .compose-panel .autosuggest-textarea label .autosuggest-textarea__textarea,
 .compose-form .autosuggest-input label .autosuggest-textarea__textarea,
