[Polyam] Change design of compose form in web UI
Port 6936e5aa693ccc4aabd26ef18a65fbb8132f6f74 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Co-authored-by: Claire <claire.github-309c@sitedethib.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/about.scss
+++ b/app/javascript/flavours/polyam/styles/components/about.scss
@@ -32,10 +32,13 @@
 
 .link-footer {
   flex: 0 0 auto;
-  padding: 10px;
   padding-top: 20px;
   z-index: 1;
   font-size: 13px;
+
+  .column & {
+    padding: 15px;
+  }
 
   p {
     color: $dark-text-color;
