--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -15,6 +15,7 @@
   &__panels {
     display: flex;
     justify-content: center;
+    gap: 16px;
     width: 100%;
     height: 100%;
     min-height: 100vh;
@@ -47,7 +48,6 @@
       flex-direction: column;
 
       @media screen and (min-width: $no-gap-breakpoint) {
-        padding: 0 10px;
         max-width: 600px;
       }
     }
@@ -589,7 +589,7 @@ $ui-header-height: 55px;
 
   &--transparent {
     background: transparent;
-    color: $ui-secondary-color;
+    color: $secondary-text-color;
 
     &:hover,
     &:focus,
