--- a/app/javascript/flavours/polyam/styles/components/emoji.scss
+++ b/app/javascript/flavours/polyam/styles/components/emoji.scss
@@ -12,10 +12,7 @@
 }
 
 .emoji-picker-dropdown__menu {
-  background: $simple-background-color;
   position: relative;
-  box-shadow: var(--dropdown-shadow);
-  border-radius: 4px;
   margin-top: 5px;
   z-index: 2;
 
@@ -38,11 +35,12 @@
 .emoji-picker-dropdown__modifiers__menu {
   position: absolute;
   z-index: 4;
-  top: -4px;
-  inset-inline-start: -8px;
-  background: $simple-background-color;
+  top: -5px;
+  inset-inline-start: -9px;
+  background: var(--dropdown-background-color);
+  border: 1px solid var(--dropdown-border-color);
   border-radius: 4px;
-  box-shadow: 1px 2px 6px rgba($base-shadow-color, 0.2);
+  box-shadow: var(--dropdown-shadow);
   overflow: hidden;
 
   button {
@@ -55,7 +53,7 @@
     &:hover,
     &:focus,
     &:active {
-      background: rgba($ui-secondary-color, 0.4);
+      background: var(--dropdown-border-color);
     }
   }
 
