--- a/app/javascript/flavours/polyam/styles/components/single_column.scss
+++ b/app/javascript/flavours/polyam/styles/components/single_column.scss
@@ -84,6 +84,7 @@
 
   .columns-area__panels {
     min-height: calc(100vh - $ui-header-height);
+    gap: 0;
   }
 
   .columns-area__panels__pane--navigational {
@@ -192,32 +193,9 @@
     }
   }
 
-  .navigation-bar {
-    flex: 0 1 48px;
-  }
-
   .compose-form {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    min-height: 310px;
-    padding-bottom: 71px;
-    margin-bottom: -71px;
-  }
-
-  .compose-form__autosuggest-wrapper {
-    overflow-y: auto;
-    background-color: $white;
-    border-radius: 4px 4px 0 0;
-    flex: 0 1 auto;
-  }
-
-  .autosuggest-textarea__textarea {
-    overflow-y: hidden;
-  }
-
-  .compose-form__upload-thumbnail {
-    height: 80px;
+    flex: 1 1 auto;
+    min-height: 0;
   }
 }
 
@@ -237,6 +215,10 @@
     height: 30px;
     width: auto;
   }
+
+  &__logo {
+    margin-bottom: 12px;
+  }
 }
 
 .navigation-panel,
@@ -251,89 +233,5 @@
 
   .flex-spacer {
     background: transparent;
-  }
-}
-
-@media screen and (width <= 630px) and (height <= 400px) {
-  $duration: 400ms;
-  $delay: 100ms;
-
-  .search {
-    will-change: margin-top;
-    transition: margin-top $duration $delay;
-  }
-
-  .navigation-bar {
-    will-change: padding-bottom;
-    transition: padding-bottom $duration $delay;
-  }
-
-  .navigation-bar {
-    & > a:first-child {
-      will-change: margin-top, margin-inline-start, margin-inline-end, width;
-      transition:
-        margin-top $duration $delay,
-        margin-inline-start $duration ($duration + $delay),
-        margin-inline-end $duration ($duration + $delay);
-    }
-
-    & > .navigation-bar__profile-edit {
-      will-change: margin-top;
-      transition: margin-top $duration $delay;
-    }
-
-    .navigation-bar__actions {
-      & > .icon-button.close {
-        will-change: opacity transform;
-        transition:
-          opacity $duration * 0.5 $delay,
-          transform $duration $delay;
-      }
-
-      & > .compose__action-bar .icon-button {
-        will-change: opacity transform;
-        transition:
-          opacity $duration * 0.5 $delay + $duration * 0.5,
-          transform $duration $delay;
-      }
-    }
-  }
-
-  .is-composing {
-    .search {
-      margin-top: -50px;
-    }
-
-    .navigation-bar {
-      padding-bottom: 0;
-
-      & > a:first-child {
-        margin: -100px 10px 0 -50px;
-      }
-
-      .navigation-bar__profile {
-        padding-top: 2px;
-      }
-
-      .navigation-bar__profile-edit {
-        position: absolute;
-        margin-top: -60px;
-      }
-
-      .navigation-bar__actions {
-        .icon-button.close {
-          pointer-events: auto;
-          opacity: 1;
-          transform: scale(1, 1) translate(0, 0);
-          bottom: 5px;
-        }
-
-        .compose__action-bar .icon-button {
-          pointer-events: none;
-          opacity: 0;
-          transform: scale(0, 1) translate(100%, 0);
-        }
-      }
-    }
   }
 }
