[Polyam] Change onboarding prompt to follow suggestions carousel in web UI
Port 9cdc60ecc6e5746b706bdcf19d0743d1c153105f to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/mastodon-light/diff.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon-light/diff.scss
@@ -206,6 +206,19 @@ html {
     no-repeat bottom / 100% auto;
 }
 
+.inline-follow-suggestions {
+  background-color: rgba($ui-highlight-color, 0.1);
+  border-bottom-color: rgba($ui-highlight-color, 0.3);
+}
+
+.inline-follow-suggestions__body__scrollable__card {
+  background: $white;
+}
+
+.inline-follow-suggestions__body__scroll-button__icon {
+  color: $white;
+}
+
 // Change the colors used in compose-form
 .compose-form {
   .compose-form__modifiers {
