Fix path to `warning-stripes.svg`
The old path caused a compile error with contrast theme as the image couldn't be found.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -553,7 +553,8 @@ body > [data-popper-placement] {
     align-items: stretch;
 
     &__border {
-      background: url('../images/warning-stripes.svg') repeat-y;
+      // Polyam: Fixed path as otherwise resource can't be found in vanilla themes
+      background: url('~images/warning-stripes.svg') repeat-y;
       width: 5px;
       flex: 0 0 auto;
 
