[Polyam] Remove leftovers from glitch-soc's layout option
Port f6f62002c71ca2531465dc01b04fbb677d4f75e6 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/compose_form.scss
+++ b/app/javascript/flavours/polyam/styles/components/compose_form.scss
@@ -122,7 +122,7 @@
       outline: 0;
     }
 
-    @include single-column('screen and (max-width: 630px)') {
+    @media screen and (width <= 600px) {
       font-size: 16px;
     }
   }
@@ -143,7 +143,7 @@
       all: unset;
     }
 
-    @include limited-single-column('screen and (max-width: 600px)') {
+    @media screen and (width <= 600px) {
       height: 100px !important; // Prevent auto-resize textarea
       resize: vertical;
     }
